--- a/libevent_demo/makefile
+++ b/libevent_demo/makefile
@@ -1,14 +1,14 @@
 src = $(wildcard *.c)
 targets = $(patsubst %.c, %, $(src))
 
-CC = gcc
-CFLAGS = -Wall -g
+CC = gcc 
+CFLAGS = -Wall -g -pthread -levent -levent_pthreads
 
 all:$(targets)
 
 $(targets):%:%.c
-        $(CC) $< -o $@ $(CFLAGS)
+	$(CC) $< -o $@ $(CFLAGS)
 
 .PHONY:clean all
 clean:
-        -rm -rf $(targets) test
+	-rm -rf $(targets) test
